run/verdiLog/vcst_novas_sim.log
                                   VC Static 
              Version U-2023.03-SP2-1 for linux64 - Oct 13, 2023
                    Copyright (c) 2010 - 2023 Synopsys, Inc.
   This software and the associated documentation are proprietary to Synopsys,
 Inc. This software may only be used in accordance with the terms and conditions
 of a written license agreement with Synopsys, Inc. All other use, reproduction,
   or distribution of this software is strictly prohibited.  Licensed Products
     communicate with Synopsys servers for the purpose of providing software
    updates, detecting software piracy and verifying that customers are using
    Licensed Products in conformity with the applicable License Key for such
  Licensed Products. Synopsys will use information gathered in connection with
    this process to deliver software updates and pursue software pirates and
                                   infringers.
 Inclusivity & Diversity - Visit SolvNetPlus to read the "Synopsys Statement on
            Inclusivity and Diversity" (Refer to article 000036315 at
                        https://solvnetplus.synopsys.com)
#MasterSourceFile fpv_run_bridge.tcl
# Select AEP as the VC Formal App mode
set_fml_appmode FPV
1
set design Bridge_Top
Bridge_Top
set_fml_var fml_aep_unique_name true
true
read_file -top $design -format sverilog -sva \
-aep all -vcs {-f ../RTL/filelist +define+INLINE_SVA \
   ../sva/bridge_top_sva.sv}
Error-[SE] Syntax error
  Following verilog source has syntax error :
  "../sva/bridge_top_sva.sv", 27: token is 'endsequence'
  endsequence
             ^
  SystemVerilog  keyword 'endsequence' is not expected to be used in this 
  context.
1 error
[Info] DB_COPT045: Vcs analyzer task has finished.
[Error] DB_COPT012: VCS reader failed
	No scm file is generated, thus no NLDM is created.
[Error] COM_ENV005: Design read using VCS & Simon failed.
Error: 0
	Use error_info for more info. (CMD-013)
Information: script 'fpv_run_bridge.tcl'
	stopped at line 7 due to error. (CMD-081)
Extended error info:
0
    while executing
"read_file -top $design -format sverilog -sva \
-aep all -vcs {-f ../RTL/filelist +define+INLINE_SVA \
   ../sva/bridge_top_sva.sv}"
    (file "fpv_run_bridge.tcl" line 7)
 -- End Extended Error Info
